package edu.pucmm.eventosacademicos.modelo;

public enum EstadoEvento {
    BORRADOR,
    PUBLICADO,
    CANCELADO
}
