package edu.pucmm.eventosacademicos.modelo;

public enum EstadoInscripcion {
    ACTIVA,
    CANCELADA
}
