package edu.pucmm.eventosacademicos.modelo;

public enum RolUsuario {
    ADMINISTRADOR,
    ORGANIZADOR,
    PARTICIPANTE
}
